service configuration file content tested